# AkiLauncher

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
assets/boxart/: README.md
icons/: app.rc  make_icon.py
src/: artwork.cpp  artwork.h  audio.cpp  audio.h  games.cpp  games.h  installer.cpp  installer.h  launch.cpp  launch.h  main.cpp  settings.cpp  settings.h
tools/: package.ps1
